<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RelativeLay">


    <TextView
            android:text="@string/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:fontFamily="@font/iop"
            android:layout_alignParentTop="true"
            android:paddingTop="30dp"/>

    <ImageView
            android:layout_width="270dp"
            android:layout_height="200dp"
            android:src="@drawable/aaa"
            android:layout_marginTop="80dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/aaa_id"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/todo"
            android:layout_alignParentStart="true"/>
    <Button
            android:text="@string/go_to_camera"
            android:layout_width="200dp"
            android:layout_marginTop="130dp"
            android:layout_toRightOf="@id/aaa_id"
            android:fontFamily="@font/ipip"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginLeft="-1dp"
            android:layout_marginStart="-1dp"
            android:layout_toEndOf="@id/aaa_id"/>
    <Button
            android:text="@string/go_to_galery"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ipip"
            android:layout_below="@id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_marginStart="270dp"/>
    <Button
            android:text="@string/back"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ipip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"/>

</RelativeLayout>