<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/choose_and_click"
              android:textColor="#000000"
              android:fontFamily="@font/reg"
              android:textSize="40sp"/>

    <Button
            android:text="@string/linear_layout"
            android:layout_width="160dp"
            android:fontFamily="@font/bas"
            android:layout_marginTop="12dp"
            android:background="#8BC34A"
            android:layout_height="wrap_content"
            android:id="@+id/linear_id"/>
    <Button
            android:text="@string/relative_layout"
            android:fontFamily="@font/bas"
            android:background="#8BC34A"
            android:layout_marginTop="12dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/relative_id"/>
    <Button
            android:text="@string/constraint_layout"
            android:background="#8BC34A"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/bas"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:id="@+id/con_id"/>

</LinearLayout>