<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LinearLay"
        android:orientation="vertical">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
                android:text="@string/linear_layout_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="40dp"
                android:paddingBottom="20dp"
                android:layout_marginBottom="30dp"
                android:textSize="17sp"
                android:textColor="#8F0808"
                android:fontFamily="@font/dffds"/>
        <TextView
                android:text="@string/vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginBottom="15dp"
                android:paddingBottom="15dp"
                android:fontFamily="@font/reg"
                android:textAlignment="center"
                android:textColor="#FFFDFD"
                android:background="#EB2727"/>
        <TextView
                android:text="@string/vertical_2"
                android:layout_width="match_parent"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:fontFamily="@font/reg"
                android:textColor="#F8F6F6"
                android:background="#EB2727"/>
        <TextView
                android:text="@string/vertical_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textAlignment="center"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/reg"
                android:textColor="#FCFBFB"
                android:background="#EB2727"/>
        <TextView
                android:text="@string/linear_layout_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textColor="#8F0808"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/dffds"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp">
            <TextView
                    android:text="@string/horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:padding="20dp"
                    android:fontFamily="@font/reg"
                    android:textColor="#F8F7F7"
                    android:layout_marginRight="35dp"
                    android:background="#F13636"/>
            <TextView
                    android:text="@string/horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="35dp"
                    android:padding="20dp"
                    android:fontFamily="@font/reg"
                    android:textColor="#F8F7F7"
                    android:background="#F13636"
                    android:layout_marginEnd="35dp"/>
            <TextView
                    android:text="@string/horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:fontFamily="@font/reg"
                    android:textColor="#F8F7F7"
                    android:background="#F13636"/>

        </LinearLayout>
    </LinearLayout>
    <Button
            android:text="Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/reg"
            android:layout_marginTop="10dp"
            android:textColor="#F8F7F7"
            android:background="#FF9800" android:id="@+id/back_id"/>


</LinearLayout>
