<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ConstraintLay"
        app:layout_editor_absoluteY="0dp"
        app:layout_editor_absoluteX="0dp">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/constraint_layout"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="30sp"
            android:fontFamily="@font/bas"
            android:textColor="#4CAF50"
            android:background="#009688"
            android:id="@+id/text1" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_something"
            app:layout_constraintTop_toBottomOf="@id/text1"
            android:layout_marginTop="32dp"
            android:id="@+id/text2"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="@font/reg"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text2"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/reg"
            android:textColor="#000000"
            android:id="@+id/edit_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="55dp"
            android:inputType="text"
            android:hint="@string/whats_on_your_mind"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_id"
            android:text="Update"
            app:layout_constraintTop_toBottomOf="@id/edit_id"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:fontFamily="@font/ipip"
            android:layout_marginStart="150dp"/>
    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/update_id"
            tools:layout_editor_absoluteY="338dp"
            android:id="@+id/foto"
            app:layout_constraintTop_toBottomOf="@id/update_id"
            android:background="#2AC4B5"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/update_id"
            tools:layout_editor_absoluteY="338dp"
            android:layout_marginLeft="32dp"
            android:background="#2AC4B5"
            android:layout_marginStart="120dp"
            app:layout_constraintTop_toBottomOf="@id/update_id"
            app:layout_constraintStart_toEndOf="@+id/foto"
            android:id="@+id/hah"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/hah"
            android:layout_marginTop="108dp"
            android:fontFamily="@font/ipip"
            android:id="@+id/back_id"
            android:text="Back"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="150dp"
            android:layout_marginStart="150dp"/>


</android.support.constraint.ConstraintLayout>